# AiDocPlus-ResourceManager

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.windsurf/workflows/: add-manager.md
apps/ai-providers-manager/: package.json
apps/ai-providers-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/ai-providers-manager/src-tauri/src/: main.rs
apps/ai-providers-manager/src-ui/: index.html  vite.config.ts
apps/ai-providers-manager/src-ui/src/: App.tsx  config.ts
apps/doc-templates-manager/: package.json
apps/doc-templates-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/doc-templates-manager/src-ui/: index.html  vite.config.ts
apps/plugins-manager/: package.json
apps/plugins-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/plugins-manager/src-ui/: index.html  vite.config.ts
apps/plugins-manager/src-ui/src/: App.tsx  (+1 more)
apps/project-templates-manager/: package.json
apps/project-templates-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/project-templates-manager/src-ui/: index.html  vite.config.ts
apps/prompt-templates-manager/: package.json
apps/prompt-templates-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/prompt-templates-manager/src-ui/: index.html  vite.config.ts
apps/resource-manager/: package.json
apps/resource-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/resource-manager/src-ui/: index.html
apps/roles-manager/: package.json
apps/roles-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/roles-manager/src-ui/: vite.config.ts
scripts/: deploy.sh
(+25 files in other folders)
